tests/macros/raw_select/mask.rs
fn main() {
    let q = requestty::questions![RawSelect { mask: todo!() }];
}
